<resources>
    <string name="app_name">i维权</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hot_questionnaire">热门问卷</string>
    <string name="my_questionnaire">我的问卷</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="questionnaire_end">感谢参与，问卷《问卷标题问卷标题问卷标题问卷标题》已提交，问卷结果将会反馈给发布者。</string>
    <string name="mystr1">消协提醒：家电延保与三包是两回事</string>
    <string name="mystr2">5小时前</string>
    <string name="mystr3">数码产品</string>
    <string name="mystr4">浙江省杭州市上城区</string>
    <string name="mystr5">监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由监督事由</string>
    <string name="myHY1">帖子标题帖子标题帖子标题帖子标题帖子标题帖子标题帖子标题</string>
    <string name="myHY2">所属板块</string>
    <string name="myHY3">2017-06-17 08:33</string>
    <string name="myHY4">200回复</string>
    <string name="myWJ1">《消费者权益保护法》调查问卷</string>
    <string name="myWJ2">完成问卷+5积分</string>
    <string name="myWJ3">4小时前</string>
    <string name="myWJ4">已过期</string>
    <string name="myXX1">版块名</string>
    <string name="myXX2">最后回复时间：11分钟前</string>
    <string name="myTZ1">通知内容摘要通知内容摘要通知内容摘要通知内容摘要通知内容摘要通知内容摘要通知内容摘要</string>
    <string name="myTZ2">2017-06-18 08:33:36</string>
    <string name="superice">监督</string>
    <string name="questionnaire">问卷</string>
    <string name="superice_publish">发布监督</string>
    <string name="superice_detail">监督详情</string>
    <string name="questionnaire_detail">问卷详情</string>
    <string name="questionnaire_result">问卷结果</string>
    <string name="wuwei">无畏</string>
    <string name="xfz">消费者</string>
    <string name="zyz">志愿者</string>
    <string name="empty"></string>
    <string name="zcxy"><![CDATA[<font color="#999999">登录注册表示同意</font><font color="#666666">《用户协议与隐私条款》</font>]]></string>
</resources>
