<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small_15">

    <TextView
        android:id="@+id/tvMyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myHY1"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/text_size_normal_16" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_lsmall_10">

        <TextView
            android:id="@+id/tvMyPartName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/myXX1"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_lsmall_12" />

        <TextView
            android:id="@+id/tvMyLasttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/myXX2"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_lsmall_12" />

    </RelativeLayout>
</LinearLayout>