<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small_15">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/myWJ1"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_normal_16" />

        <TextView
            android:id="@+id/tvMyTitleGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/myWJ2"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_lsmall_12" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small_15">

        <TextView
            android:id="@+id/tvMyTimeAgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_time"
            android:drawablePadding="@dimen/margin_llsmall_5"
            android:text="@string/myWJ3"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_lsmall_12" />

        <TextView
            android:id="@+id/tvMyState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/myWJ4"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_lsmall_12" />

    </RelativeLayout>
</LinearLayout>